--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
   <meta name="description" content="Preparation for TOTEC 2014">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="ico/favicon.ico">
+  <!-- inline css -->
+  <link rel="stylesheet" href="css/inline/main.css?__inline=true">
+  <!-- external css -->
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <!-- Add your site or application content here -->
-<p>Hello world! This is HTML5 Boilerplate.</p>
+<h1>Hello world! This is HTML5 Boilerplate.</h1>
 </body>
 </html>
