--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,11 @@
 <body>
 <!-- Add your site or application content here -->
 <h1>Hello world! This is HTML5 Boilerplate.</h1>
+
+<!-- build:js lib/lib.min.js  -->
+<script src="lib/lodash/lodash.compat.js"></script>
+<script src="lib/jquery/jquery.js"></script>
+<!-- endbuild -->
+
 </body>
 </html>
