--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,10 @@
 <script src="lib/jquery/jquery.js"></script>
 <!-- endbuild -->
 
+<!-- build:js js/main.min.js  -->
+<script src="js/app.js"></script>
+<script src="js/controller.js"></script>
+<!-- endbuild -->
+
 </body>
 </html>
